==> Sirokujira/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/RX63N/DeviceCode/RX63N_USB/RX63N_usb_functions.cpp <==
#include <tinyhal.h>
#include <Include\USB_decl.h>
#include <pal\com\usb\USB.h>
#include "..\RX63N.h"
#include "RX63N_usb_functions.h"
#include "debug_printf.h"
#define USB_MAX_PIPE    10  // max number of pipes
#define USB_MAX_FIFO    3   // max number of fifo
#define FIFO_CFIFO      0   // CFIFO
#define FIFO_D0FIFO     1   // DOFIFO
#define FIFO_D1FIFO     2   // D1FIFO
#define MBW_BYTE        0   // byte access
#define MBW_WORD        1   // word access
#define PIPE_BULK_ST    1   // pipe bulk start no
#define PIPE_INT_ST     6   // pipe interrupt startr no
#define PID_NAK     0
#define PID_BUF     1
#define PID_STALL_1 2
#define PID_STALL_2 3
#define DIR_IN      1       // Write
#define DIR_OUT     0       // Read
#define	MASK_BEMPE	(0x0400)
#define	MASK_NRDYE	(0x0200)
#define	MASK_BRDYE	(0x0100)

void USB0_HW_Initialize(void)
{
    SYSTEM.PRCR.WORD = 0xA502;          /* protect off */
    MSTP(USB0) = 0;
    SYSTEM.PRCR.WORD = 0xA500;          /* protect on */

    USB.DPUSR0R.BIT.FIXPHY0 = 0u;   /* USB0 Transceiver Output fixed */

    MPC.PWPR.BIT.B0WI   = 0u;   // Enable PFSWE bit
    MPC.PWPR.BIT.PFSWE  = 1u;   // Enable PFS register
    PORT1.PMR.BIT.B4    = 1u;   // P14 peripheral
    PORT1.PMR.BIT.B6    = 1u;   // P16 peripheral
    MPC.P14PFS.BYTE = 0x11;     // USB0_DPUPE
    MPC.P16PFS.BYTE = 0x11;     // USB0_VBUS
    MPC.PFUSB0.BIT.PUPHZS = 1u; // Pullup
    MPC.PWPR.BIT.PFSWE  = 0u;   // Disable PFS register
    MPC.PWPR.BIT.B0WI   = 1u;   // Disable PFSWE bit
}

void Pipe_Config(void)
{
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    const USB_ENDPOINT_DESCRIPTOR *pep = (USB_ENDPOINT_DESCRIPTOR *)NULL;
    const USB_INTERFACE_DESCRIPTOR *pif  = (USB_INTERFACE_DESCRIPTOR *)NULL;
    while (USB_NextEndpoint(State, pep, pif)) {
        UINT32 endpoint = pep->bEndpointAddress & 0x7F;
        UINT32 dir = (pep->bEndpointAddress & 0x80)? 1:0;
        RX63N_USB_EP_Initialize((UINT32)RX63N_USB_Pipe[endpoint],
                (UINT32)endpoint, (UINT32)dir, pep->bmAttributes, pep->wMaxPacketSize);
    }
}

void HandleSetupCmd(void)
{
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    USB0.INTSTS0.BIT.VALID = 0;
    UINT16 *buf = (UINT16 *)&USB_EP0Buffer[0];
    *buf++ = USB0.USBREQ.WORD;
    *buf++ = USB0.USBVAL;
    *buf++ = USB0.USBINDX;
    *buf = USB0.USBLENG;
    State->Data = (UINT8 *)&USB_EP0Buffer[0];
    State->DataSize = (UINT8)8;
    UINT8 result = USB_ControlCallback(State);
   // g_Control.m_etState = STATE_CONTROL_SETUP;
    switch (result) {
    case USB_STATE_DATA:
        break;
    case USB_STATE_ADDRESS:
        /* upper layer needs us to change the address */
        // address change delayed to end of reply packet
        break;
    case USB_STATE_DONE:
        USB_DEBUG1("E\n");
        State->DataCallback = NULL;
        break;
    case USB_STATE_STALL:
        USB_DEBUG1("l");
        return;
    case USB_STATE_STATUS:
        USB_DEBUG1("m");
        break;
    case USB_STATE_CONFIGURATION:
        USB_DEBUG1("c");
        break;
    case USB_STATE_REMOTE_WAKEUP:
        USB_DEBUG1("w");
        break;
    default:
        break;
    }
    if (result != USB_STATE_STALL) {
        if (State->DataCallback != NULL) {
            State->DataCallback(State);
            if (State->DataSize != 0) {
                USB_DEBUG1("HSi");
                Pipe_Write(0, (UINT8 *)State->Data, (UINT32)MAX_EP0_SIZE, (UINT32)State->DataSize);
            } else {
                USB_DEBUG1("HS0");
                USB_Control_Status();
            }
        }
    }
}

void HandleVBus(void)
{
    USB_DEBUG1("V");
    UINT8 vbsts_value;
    UINT8 count;
    #define CHATTER_COUNT 5
    do {
        count = CHATTER_COUNT;
        vbsts_value = (UINT8)USB0.INTSTS0.BIT.VBSTS;
        while (count != 0) {
            if ((UINT8)USB0.INTSTS0.BIT.VBSTS != vbsts_value) {
                break;
            } else {
                count--;
            }
        }
    } while (count != 0);
    if (1 == vbsts_value) { // connected;
        RX63N_USB_Reset();
    } else {                // disconnected;
        RX63N_USB_Reset();
    }
}

void HandleDVST(void)
{
    switch(USB0.INTSTS0.BIT.DVSQ)
    {
        case 0:         // Powered State
            USB_DEBUG1("D0\r\n");
            break;
        case 1:         // Default State
            USB_DEBUG1("D1\r\n");
            if (USB0.DVSTCTR0.BIT.RHST == 4) {  // BUS RESET
                RX63N_USB_EP_Reset();
            }
            break;
        case 2:         // Address State
            USB_DEBUG1("D2\r\n");
            break;
        case 3:         // Configured State
            USB_DEBUG1("D3\r\n");
            RX63N_USB_EP_Reset();
#ifdef USB_DUMP_PID
            dump_pid(1);
            dump_pid(2);
#endif
            break;
        case 4:
        default:        // Suspended State
            USB_DEBUG1("D4\r\n");
            break;
    };
}

void HandleBEMP(void)
{
    GLOBAL_LOCK(irq);
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    UINT32 bempsts = (UINT32)USB0.BEMPSTS.WORD;
    UINT32 bempenb = (UINT32)USB0.BEMPENB.WORD;
    if (1 == USB0.BEMPSTS.BIT.PIPE0BEMP) {
        USB_DEBUG1("Be0");
        USB0.BEMPSTS.WORD = ~0x0001;
        if (State->DataCallback != NULL) {
            State->DataCallback(State);
            if (State->DataSize != 0) {
                Pipe_Write(0, (UINT8 *)State->Data, (UINT32)MAX_EP0_SIZE, (UINT32)State->DataSize);
            } else {
                USB_Control_Status();
            }
        } else {
            USB_Control_Status();
        }
    } else {
        USB0.BEMPSTS.WORD = ~bempsts;
        for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
            INT8 pipeno = RX63N_USB_Pipe[endpoint];
            if (pipeno >= 0) {
                UINT32 mask = (1 << pipeno);
                if ((bempsts & mask) && (bempenb & mask)) {
#ifdef USB_DUMP_BEMP
                    USB_DEBUG2("Be%d", endpoint);
#endif
                    UINT16 pid = GetPipePid(pipeno);
                    if ((pid == PID_STALL_1) || (pid == PID_STALL_2)) {
                        USB_DEBUG2("St%d", pid);
                    } else {
                        if (Pipe_Inbuf(pipeno) == 0) {
                            usb_int_bemp_disable(pipeno);
                            SetPipePidNAK(pipeno);
#ifdef USB_USE_TXZERO_INT
                            if (RX63N_USB_Zero == 1) {
                                USB_DEBUG1("s0");
                                Pipe_Write(pipeno, 0, 64, 0);
                                RX63N_USB_Zero = 2;
                            }
#endif
                        }
                    }
                }
            }
        }
    }
}

void HandleNRDY(void)
{
    GLOBAL_LOCK(irq);
    UINT32 nrdysts = (UINT32)USB0.NRDYSTS.WORD;
    UINT32 nrdyenb = (UINT32)USB0.NRDYENB.WORD;
    USB0.NRDYSTS.WORD = ~nrdysts;
    for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
        INT8 pipeno = RX63N_USB_Pipe[endpoint];
        if (pipeno >= 0) {
            UINT32 mask = (1 << pipeno);
            if ((nrdysts & mask) && (nrdyenb & mask)) {
                USB0.NRDYSTS.WORD = ~mask;
#ifdef USB_DUMP_NRDY
                USB_DEBUG2("Nr%d", pipeno);
#endif
#ifdef USB_USE_TXZERO_INT
                if (RX63N_USB_Zero == 2) {
                    RX63N_USB_Zero = 0;
                } else {
                    SetPipePidBUF(pipeno);
                }
#endif
                usb_int_nrdy_disable(pipeno);
            }
        }
    }
}

void HandleBRDY(void)
 {
	UINT32 brdysts = (UINT32) USB0.BRDYSTS.WORD;
	UINT32 brdyenb = (UINT32) USB0.BRDYENB.WORD;
	USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;

	if ((USB0.BRDYSTS.BIT.PIPE0BRDY == 1)
	        && (USB0.BRDYENB.BIT.PIPE0BRDYE == 1)) {
		USB_DEBUG1("br0");
		USB0.BRDYSTS.WORD = ~0x0001;
		State->Data = (UINT8 *) &USB_EP0Buffer[0];
		UINT32 size = 0;
		Pipe0_Read((UINT8 *) State->Data, MAX_EP0_SIZE, &size);
		State->DataSize = (UINT8) size;
	} else {
		for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
			INT8 pipeno = RX63N_USB_Pipe[endpoint];
			if (pipeno >= 0) {
			    UINT32 mask = (1 << pipeno);
			    if ((brdysts & mask) && (brdyenb & mask)) {
			        USB0.BRDYSTS.WORD = ~mask;
			        USB0.PIPESEL.BIT.PIPESEL = pipeno;
			        if (USB0.PIPECFG.BIT.DIR == 0) {
			            RX63N_USB_Receive(State, endpoint);  // OUT
			        } else {
			            RX63N_USB_Send(State, endpoint);     // IN
			        }
			    }
			}
		}
	}
 }

HRESULT CPU_USB_Initialize(int Controller)
{
    USB_DEBUG_INIT();
    USB_DEBUG1("CPU_USB_Initialize START\n");
    GLOBAL_LOCK(irq);
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    if (Controller != 0) return S_FALSE;
#ifdef RENESAS_FW
    USB_Init();
#endif
    RX63N_USB_HW_Initialize();
    USB_PinsProtected = FALSE;
    CPU_USB_ProtectPins(Controller, TRUE);;
    State->DeviceState = USB_DEVICE_STATE_DETACHED;
    USB_StateCallback(State);
    USB_PinsProtected = TRUE;
    State->EndpointCount = USB_MAX_EP;
    State->EndpointStatus = &USB_EPStatus[0];
    State->PacketSize = MAX_EP0_SIZE;
    UINT32 endpoint;
    for (endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
        State->CurrentPacketOffset[endpoint] = 0;
        State->IsTxQueue[endpoint] = FALSE;
        State->MaxPacketSize[endpoint] = USB_MAX_DATA_PACKET_SIZE;
        RX63N_USB_Pipe[endpoint] = -1;
    }
    USB_EP_Type = 0;
    RX63N_USB_Zero = 0;
    pipe_interrupt = PIPE_INT_ST;
    pipe_bulk = PIPE_BULK_ST;
    const USB_ENDPOINT_DESCRIPTOR *pep = (USB_ENDPOINT_DESCRIPTOR *)NULL;
    const USB_INTERFACE_DESCRIPTOR *pif  = (USB_INTERFACE_DESCRIPTOR *)NULL;
    while (USB_NextEndpoint(State, pep, pif)) {
        endpoint = pep->bEndpointAddress & 0x7F;
        UINT8 endpointSize = pep->wMaxPacketSize;
        State->MaxPacketSize[endpoint] = endpointSize;
        QueueBuffers[endpoint-1].Initialize();
        State->Queues[endpoint] = &QueueBuffers[endpoint-1];
        USB_EPDesc[endpoint] = pep;
        switch (pep->bmAttributes) {
        case USB_ENDPOINT_ATTRIBUTE_BULK:
            RX63N_USB_Pipe[endpoint] = pipe_bulk;
            if (pep->bEndpointAddress & 0x80) {
                RX63N_USB_EP_Initialize((UINT32)pipe_bulk++,
                        (UINT32)endpoint, (UINT32)1, pep->bmAttributes, endpointSize);
                State->IsTxQueue[endpoint] = TRUE;
            } else {
                RX63N_USB_EP_Initialize((UINT32)pipe_bulk++,
                        (UINT32)endpoint, (UINT32)0, pep->bmAttributes, endpointSize);
            }
            break;
        case USB_ENDPOINT_ATTRIBUTE_INTERRUPT:
            RX63N_USB_Pipe[endpoint] = pipe_interrupt;
            if (pep->bEndpointAddress & 0x80) {
                RX63N_USB_EP_Initialize(pipe_interrupt++,
                        endpoint, 1, pep->bmAttributes, endpointSize);
                State->IsTxQueue[endpoint] = TRUE;
            } else {
                RX63N_USB_EP_Initialize(pipe_interrupt++,
                        endpoint, 0, pep->bmAttributes, endpointSize);
            }
            break;
        case USB_ENDPOINT_ATTRIBUTE_ISOCHRONOUS:
            // ToDo
        default:
            break;
        }
        USB_EP_Type |= (pep->bmAttributes & 3) << (endpoint * 2);
    }
    if (USB_EP_Type == 0)
        return S_FALSE;
    HAL_Time_Sleep_MicroSeconds(1000);
    RX63N_USB_Interrupt_Enable();
    CPU_USB_ProtectPins(Controller, FALSE);
    USB_DEBUG1("*I*");
    return S_OK;
}

HRESULT CPU_USB_Uninitialize(int Controller)
{
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    GLOBAL_LOCK(irq);
    memset(&g_RX63N_USB_ControllerState, 0, sizeof(g_RX63N_USB_ControllerState));
    CPU_USB_ProtectPins(Controller, TRUE);
    USB_EP_Type = 0;
    State->DeviceState = USB_DEVICE_STATE_DETACHED;
    RX63N_USB_Interrupt_Uninitialize();
    USB_DEBUG1("*U*");
    return S_OK;
}

BOOL CPU_USB_StartOutput(USB_CONTROLLER_STATE* State, int endpoint)
{
    //GLOBAL_LOCK(irq);
    USB_DEBUG2("\r\nSo%d ", endpoint);
    if (State == NULL || endpoint >= USB_MAX_EP)
        return FALSE;
    if (State->Queues[endpoint] == NULL || !State->IsTxQueue[endpoint])
        return FALSE;
    if (USB_EPStatus[endpoint] & USB_STATUS_ENDPOINT_HALT) {
        while (USB_TxDequeue(State, endpoint, TRUE) != NULL);  // clear TX queue
        return TRUE;
    }
#if 1
    UINT32 pipeno = RX63N_USB_Pipe[endpoint];
    if (Pipe_Inbuf(pipeno) == 0) {
        SetPipePidNAK(pipeno);
#ifdef USB_DUMP_PID
        dump_pid(pipen0);
#endif
        RX63N_USB_Send(State, endpoint);
#ifdef USB_DUMP_PID
        dump_pid(pipeno);
#endif
#else
        UINT32 pipeno = RX63N_USB_Pipe[endpoint];
        Pipe_ClearCounter(pipeno);
        SetPipePidNAK(pipeno);
        usb_int_brdy_enable(pipeno);
#endif
        return TRUE;
    } else
        return FALSE;
}

BOOL CPU_USB_ProtectPins(int Controller, BOOL On)
{
    USB_CONTROLLER_STATE *State = &g_RX63N_USB_ControllerState;
    GLOBAL_LOCK(irq);
    if (On == TRUE) {
        if (USB_PinsProtected == FALSE) {
            USB_DEBUG1("+");
            USB_PinsProtected = TRUE;
            RX63N_USB_Pullup_Disconnect();
            RX63N_USB_Reset();
            for(int ep = 1; ep < USB_MAX_EP; ep++) {
                if (State->Queues[ep] && State->IsTxQueue[ep]) {
                    while (USB_TxDequeue(State, ep, TRUE) != NULL);
                }
            }
            State->DeviceState = USB_DEVICE_STATE_DETACHED;
            USB_StateCallback(State);
        }
    } else {
        if (USB_PinsProtected == TRUE) {
            USB_DEBUG1("-");
            USB_PinsProtected = FALSE;
            RX63N_USB_Pullup_Connect();
            RX63N_USB_Reset();
            State->DeviceState = USB_DEVICE_STATE_ATTACHED;
            USB_StateCallback(State);
        }
    }
    return TRUE;
}
