==> Sirokujira/MicroFrameworkPK_v4_3/DeviceCode/Targets/Native/MBED/DeviceCode/MBED_USB/MBED_usb_functions.cpp <==
#include <tinyhal.h>
#define TARGET_RZ_A1H
#include "mbed.h"
#include <Include\USB_decl.h>
#include <pal\com\usb\USB.h>
#include "MBED_usb_functions.h"
#define USB_DEBUG1(x0)      dbg_printf(x0)
#define USB_DEBUG2(x0,x1)   dbg_printf(x0,x1)
#define USB_DEBUG1(x0)
#define USB_DEBUG2(x0,x1)

void USB0_HW_Initialize(void)
{
    // ToDo
    CPU_GPIO_EnableOutputPin(en_usb, 1);
    UINT16 clock_mode = USBFCLOCK_X1_48MHZ;
    UINT16 mode = USB_FUNCTION_HIGH_SPEED;

    CPG.STBCR7 &= ~(CPG_STBCR7_MSTP71);
    volatile uint8_t dummy8;
    dummy8 = CPG.STBCR7;
    /* reset USB module with setting tranciever and HSE=1 */
    usb0_function_reset_module(clock_mode);
    /* clear variables */
    //usb0_function_init_status();
    /* select USB Function and Interrupt Enable */
    /* Detect USB Device to attach or detach    */
    USB200.SYSCFG0 = (USB200.SYSCFG0 & 0xffbf) | (0 << 6);  //DCFM
    USB200.SYSCFG0 = (USB200.SYSCFG0 & 0xfffe) | (1 << 0);  //USBE
    if (mode == USB_FUNCTION_HIGH_SPEED)
        USB200.SYSCFG0 = (USB200.SYSCFG0 & 0xff7f) | (1 << 7);  //HSE
    else
        USB200.SYSCFG0 = (USB200.SYSCFG0 & 0xff7f) | (0 << 7);  //HSE
    USB200.BUSWAIT = 20;
    {
        UINT16 buf;
        buf  = USB200.INTENB0;
        buf |= USB_INTENB0_SOFE;
        USB200.INTENB0 = buf;
    }
}

void Pipe_Config(void)
{
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    const USB_ENDPOINT_DESCRIPTOR *pep = (USB_ENDPOINT_DESCRIPTOR *)NULL;
    const USB_INTERFACE_DESCRIPTOR *pif  = (USB_INTERFACE_DESCRIPTOR *)NULL;
    while (USB_NextEndpoint(State, pep, pif)) {
        UINT32 endpoint = pep->bEndpointAddress & 0x7F;
        UINT32 dir = (pep->bEndpointAddress & 0x80)? 1:0;
        MBED_USB_EP_Initialize((UINT32)MBED_USB_Pipe[endpoint],
                (UINT32)endpoint, (UINT32)dir, pep->bmAttributes, pep->wMaxPacketSize);
    }
}

void HandleSetupCmd(void)
{
    USB200.INTSTS0 &= ~USB_INTSTS0_VALID;
    
    UINT16 *buf = (UINT16 *)&USB_EP0Buffer[0];
    buf[0] = USB200.USBREQ;
    buf[1] = USB200.USBVAL;
    buf[2] = USB200.USBINDX;
    buf[3] = USB200.USBLENG;
    
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    
    State->Data = (UINT8 *)buf;
    State->DataSize = 8;
    UINT8 result = USB_ControlCallback(State);
    
    switch (result) {
    case USB_STATE_DATA:
        break;
    case USB_STATE_ADDRESS:
        break;
    case USB_STATE_DONE:
        State->DataCallback = NULL;
        break;
    case USB_STATE_STALL:
        return;
    case USB_STATE_STATUS:
        break;
    case USB_STATE_CONFIGURATION:
        break;
    case USB_STATE_REMOTE_WAKEUP:
        break;
    default:
        break;
    }
    
    if (State->DataCallback != NULL) {
        State->DataCallback(State);
        if (State->DataSize != 0) {
            Pipe_Write(0, (UINT8 *)State->Data, MAX_EP0_SIZE, State->DataSize);
        }
    }
    if (State->DataCallback == NULL) {
        USB_Control_Status();
    }
}

void HandleVBus(void)
{
    USB_DEBUG1("V");
    UINT16 vbsts_value;
    UINT8 count;
    #define CHATTER_COUNT 5
    do {
        count = CHATTER_COUNT;
        vbsts_value = USB200.INTSTS0 & 0x0080;
        while (count != 0) {
            if ((USB200.INTSTS0 & 0x0080) != vbsts_value) {
                break;
            } else {
                count--;
            }
        }
    } while (count != 0);
    if (0 != vbsts_value) { // connected;
        MBED_USB_Reset();
    } else {                // disconnected;
        MBED_USB_Reset();
    }
}

void HandleDVST(void)
{
    switch((USB200.INTSTS0 & 0x0070) >> 4)
    {
        case 0:         // Powered State
            USB_DEBUG1("D0\r\n");
            break;
        case 1:         // Default State
            USB_DEBUG1("D1\r\n");
            if ((USB200.DVSTCTR0 & 0x0007) == 4) {  // BUS RESET
                MBED_USB_EP_Reset();
            }
            break;
        case 2:         // Address State
            USB_DEBUG1("D2\r\n");
            break;
        case 3:         // Configured State
            USB_DEBUG1("D3\r\n");
            MBED_USB_EP_Reset();
            break;
        case 4:
        default:        // Suspended State
            USB_DEBUG1("D4\r\n");
            break;
    };
}

void HandleBEMP(void)
{
    GLOBAL_LOCK(irq);
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    UINT16 bempsts = (UINT16)USB200.BEMPSTS;
    UINT16 bempenb = (UINT16)USB200.BEMPENB;
    if (1 == (USB200.BEMPSTS & 0x0001)) {
        USB_DEBUG1("e0");
        USB200.BEMPSTS = ~0x0001;
        if (State->DataCallback != NULL) {
            State->DataCallback(State);
            Pipe_Write(0, (UINT8 *)State->Data, (UINT32)MAX_EP0_SIZE, (UINT32)State->DataSize);
        } else {
            SetPipePidNAK(0);
        }
    } else {
        USB200.BEMPSTS = ~bempsts;
        for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
            INT8 pipeno = MBED_USB_Pipe[endpoint];
            if (pipeno >= 0) {
                UINT16 mask = (1 << pipeno);
                if ((bempsts & mask) && (bempenb & mask)) {
                    UINT16 pid = GetPipePid((UINT32)pipeno);
                    if ((pid == PID_STALL_1) || (pid == PID_STALL_2)) {
                        USB_DEBUG2("St%d", pid);
                    } else {
                        if (Pipe_Inbuf((UINT32)pipeno) == 0) {
                            usb_int_bemp_disable((UINT32)pipeno);
                            SetPipePidNAK((UINT32)pipeno);
                        }
                    }
                }
            }
        }
    }
}

void HandleNRDY(void)
{
    GLOBAL_LOCK(irq);
    UINT16 nrdysts = (UINT16)USB200.NRDYSTS;
    UINT16 nrdyenb = (UINT16)USB200.NRDYENB;
    USB200.NRDYSTS = ~nrdysts;
    for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
        INT8 pipeno = MBED_USB_Pipe[endpoint];
        if (pipeno >= 0) {
            UINT16 mask = (1 << pipeno);
            if ((nrdysts & mask) && (nrdyenb & mask)) {
                USB200.NRDYSTS = ~mask;
                usb_int_nrdy_disable((UINT32)pipeno);
            }
        }
    }
}

void HandleBRDY(void)
 {
	UINT16 brdysts = (UINT16)USB200.BRDYSTS;
	UINT16 brdyenb = (UINT16)USB200.BRDYENB;
	USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
	if (((USB200.BRDYSTS & 0x0001) == 1)
	        && ((USB200.BRDYENB & 0x0001) == 1)) {
		USB_DEBUG1("b0");
		USB200.BRDYSTS = ~0x0001;
		State->Data = (UINT8 *)&USB_EP0Buffer[0];
		UINT32 size = 0;
		Pipe0_Read((UINT8 *)State->Data, MAX_EP0_SIZE, &size);
		State->DataSize = (UINT8)size;
	} else {
		for (UINT32 endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
			INT8 pipeno = MBED_USB_Pipe[endpoint];
			if (pipeno >= 0) {
			    UINT16 mask = (1 << pipeno);
			    if ((brdysts & mask) && (brdyenb & mask)) {
			        USB200.BRDYSTS = ~mask;
			        USB200.PIPESEL = pipeno & 0x000f;
			        if (pipecfg->BIT.DIR == 0) {
			            MBED_USB_Receive(State, endpoint);  // OUT
			        } else {
			            MBED_USB_Send(State, endpoint);     // IN
			        }
			    }
			}
		}
	}
 }

HRESULT CPU_USB_Initialize(int Controller)
{
#if defined(DEBUG_USB)
    DebuggerPort_Initialize(COM1);
#endif
    GLOBAL_LOCK(irq);
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    if (Controller != 0) return S_FALSE;
#ifdef RENESAS_FW
    USB_Init();
#endif
    MBED_USB_HW_Initialize();
    USB_PinsProtected = FALSE;
    CPU_USB_ProtectPins(Controller, TRUE);;
    State->DeviceState = USB_DEVICE_STATE_DETACHED;
    USB_StateCallback(State);
    USB_PinsProtected = TRUE;
    State->EndpointCount = USB_MAX_EP;
    State->EndpointStatus = &USB_EPStatus[0];
    State->PacketSize = MAX_EP0_SIZE;
    UINT32 endpoint;
    for (endpoint = 1; endpoint < USB_MAX_EP; endpoint++) {
        State->CurrentPacketOffset[endpoint] = 0;
        State->IsTxQueue[endpoint] = FALSE;
        State->MaxPacketSize[endpoint] = USB_MAX_DATA_PACKET_SIZE;
        MBED_USB_Pipe[endpoint] = -1;
    }
    USB_EP_Type = 0;
    MBED_USB_Zero = 0;
    pipe_interrupt = PIPE_INT_ST;
    pipe_bulk = PIPE_BULK_ST;
    const USB_ENDPOINT_DESCRIPTOR *pep = (USB_ENDPOINT_DESCRIPTOR *)NULL;
    const USB_INTERFACE_DESCRIPTOR *pif  = (USB_INTERFACE_DESCRIPTOR *)NULL;
    while (USB_NextEndpoint(State, pep, pif)) {
        endpoint = pep->bEndpointAddress & 0x7F;
        UINT8 endpointSize = pep->wMaxPacketSize;
        State->MaxPacketSize[endpoint] = endpointSize;
        QueueBuffers[endpoint-1].Initialize();
        State->Queues[endpoint] = &QueueBuffers[endpoint-1];
        USB_EPDesc[endpoint] = pep;
        switch (pep->bmAttributes) {
        case USB_ENDPOINT_ATTRIBUTE_BULK:
            MBED_USB_Pipe[endpoint] = pipe_bulk;
            if (pep->bEndpointAddress & 0x80) {
                MBED_USB_EP_Initialize((UINT32)pipe_bulk++,
                        (UINT32)endpoint, (UINT32)1, pep->bmAttributes, endpointSize);
                State->IsTxQueue[endpoint] = TRUE;
            } else {
                MBED_USB_EP_Initialize((UINT32)pipe_bulk++,
                        (UINT32)endpoint, (UINT32)0, pep->bmAttributes, endpointSize);
            }
            break;
        case USB_ENDPOINT_ATTRIBUTE_INTERRUPT:
            MBED_USB_Pipe[endpoint] = pipe_interrupt;
            if (pep->bEndpointAddress & 0x80) {
                MBED_USB_EP_Initialize(pipe_interrupt++,
                        endpoint, 1, pep->bmAttributes, endpointSize);
                State->IsTxQueue[endpoint] = TRUE;
            } else {
                MBED_USB_EP_Initialize(pipe_interrupt++,
                        endpoint, 0, pep->bmAttributes, endpointSize);
            }
            break;
        case USB_ENDPOINT_ATTRIBUTE_ISOCHRONOUS:
            // ToDo
        default:
            break;
        }
        USB_EP_Type |= (pep->bmAttributes & 3) << (endpoint * 2);
    }
    if (USB_EP_Type == 0)
        return S_FALSE;
    HAL_Time_Sleep_MicroSeconds(1000);
    MBED_USB_Interrupt_Enable();
    CPU_USB_ProtectPins(Controller, FALSE);
    InterruptHandlerRegister(USBI0_IRQn, USBInterruptHandler);
    GIC_SetPriority(USBI0_IRQn, 5);
    GIC_EnableIRQ(USBI0_IRQn);
    USB_DEBUG1("*I*");
    return S_OK;
}

HRESULT CPU_USB_Uninitialize(int Controller)
{
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    GLOBAL_LOCK(irq);
    memset(&g_MBED_USB_ControllerState, 0, sizeof(g_MBED_USB_ControllerState));
    CPU_USB_ProtectPins(Controller, TRUE);
    USB_EP_Type = 0;
    State->DeviceState = USB_DEVICE_STATE_DETACHED;
    MBED_USB_Interrupt_Uninitialize();
    GIC_DisableIRQ(USBI0_IRQn);
    USB_DEBUG1("*U*");
    return S_OK;
}

BOOL CPU_USB_StartOutput(USB_CONTROLLER_STATE* State, int endpoint)
{
    //GLOBAL_LOCK(irq);
    USB_DEBUG2("\r\nSo%d ", endpoint);
    if (State == NULL || endpoint >= USB_MAX_EP)
        return FALSE;
    if (State->Queues[endpoint] == NULL || !State->IsTxQueue[endpoint])
        return FALSE;
    if (USB_EPStatus[endpoint] & USB_STATUS_ENDPOINT_HALT) {
        while (USB_TxDequeue(State, endpoint, TRUE) != NULL);  // clear TX queue
        return TRUE;
    }
    UINT32 pipeno = MBED_USB_Pipe[endpoint];
    if (Pipe_Inbuf(pipeno) == 0) {
        SetPipePidNAK(pipeno);
        MBED_USB_Send(State, endpoint);
        return TRUE;
    } else
        return FALSE;
}

BOOL CPU_USB_ProtectPins(int Controller, BOOL On)
{
    USB_CONTROLLER_STATE *State = &g_MBED_USB_ControllerState;
    GLOBAL_LOCK(irq);
    if (On == TRUE) {
        if (USB_PinsProtected == FALSE) {
            USB_DEBUG1("+");
            USB_PinsProtected = TRUE;
            MBED_USB_Pullup_Disconnect();
            MBED_USB_Reset();
            for(int ep = 1; ep < USB_MAX_EP; ep++) {
                if (State->Queues[ep] && State->IsTxQueue[ep]) {
                    while (USB_TxDequeue(State, ep, TRUE) != NULL);
                }
            }
            State->DeviceState = USB_DEVICE_STATE_DETACHED;
            USB_StateCallback(State);
        }
    } else {
        if (USB_PinsProtected == TRUE) {
            USB_DEBUG1("-");
            USB_PinsProtected = FALSE;
            MBED_USB_Pullup_Connect();
            MBED_USB_Reset();
            State->DeviceState = USB_DEVICE_STATE_ATTACHED;
            USB_StateCallback(State);
        }
    }
    return TRUE;
}
